--- a/CICD/Jenkinsfile
+++ b/CICD/Jenkinsfile
@@ -2,6 +2,6 @@ node
 {
     stage("TEST STAGE")
     {
-        print("Hello world! (ofc, what else, also im running from GIT kekw TEST)")
+        print("Hello world! (ofc, what else, also im running from GIT kekw TESTT)")
     }
 }
