--- a/CICD/Jenkinsfile
+++ b/CICD/Jenkinsfile
@@ -3,6 +3,7 @@ node
 
     stage("CLONE WS")
     {
+        sh "rm -r elte-ik-msc-weather-cam"
         sh "git clone https://github.com/SandorBalazsHU/elte-ik-msc-weather-cam"
     }
 
@@ -10,7 +11,7 @@ node
     {
         sh "ls -l"
         sh "echo -----START COMPILE-----"
-        sh "arduino-cli compile --fqbn esp8266:esp8266:nodemcu elte-ik-msc-weather-cam/Hardware/ESP8266WeatherStation.ino"
+        sh "arduino-cli compile --fqbn esp8266:esp8266:nodemcu elte-ik-msc-weather-cam/Hardware/ESP8266WeatherStation/ESP8266WeatherStation.ino"
     }
     stage("CLEAN WS")
     {
