--- a/CICD/Jenkinsfile
+++ b/CICD/Jenkinsfile
@@ -1,17 +1,22 @@
 node
 {
     currentBuild.displayName = "vm_weather_onCommit_" + currentBuild.number
-    
+
     stage("CLONE WS")
     {
-        sh "rm -r elte-ik-msc-weather-cam"
+        try
+        {
+           sh "rm -r elte-ik-msc-weather-cam" 
+        }catch(Exception e)
+        {
+            echo "Ws already deleted"
+        }
         sh "git clone https://github.com/SandorBalazsHU/elte-ik-msc-weather-cam"
     }
 
     stage("HARDWARE COMPILE")
     {
-        sh "ls -l"
-        sh "echo -----START COMPILE-----"
+        echo "----START COMPILE-----"
         sh "arduino-cli compile --fqbn esp8266:esp8266:nodemcu elte-ik-msc-weather-cam/Hardware/ESP8266WeatherStation/ESP8266WeatherStation.ino"
     }
     stage("CLEAN WS")
