--- a/CICD/Jenkinsfile
+++ b/CICD/Jenkinsfile
@@ -30,7 +30,8 @@ node
 
         sh "composer require --dev phpunit/phpunit ^9"
 
-        sh "./vendor/bin/phpunit ./tests/DemoTest.php"
+        sh "cd elte-ik-msc-weather-cam/WebAPI"
+        sh "./vendor/bin/phpunit tests"
     }
 
     stage("CLEAN WS")
