--- a/CICD/Jenkinsfile
+++ b/CICD/Jenkinsfile
@@ -30,8 +30,7 @@ node
 
         sh "composer require --dev phpunit/phpunit ^9"
 
-        sh "cd elte-ik-msc-weather-cam/WebAPI"
-        sh "./vendor/bin/phpunit tests"
+        sh "./vendor/bin/phpunit  elte-ik-msc-weather-cam/WebAPI/tests"
     }
 
     stage("CLEAN WS")
