branch change fixed

--- a/CICD/Jenkinsfile
+++ b/CICD/Jenkinsfile
@@ -12,7 +12,8 @@ node
             echo "Ws already deleted"
         }
         sh "git clone https://github.com/SandorBalazsHU/elte-ik-msc-weather-cam"
-        sh "git branch dev"
+        sh "git branch"
+        sh "git checkout dev"
     }
 
     stage("HARDWARE COMPILE")
