--- a/CICD/Jenkinsfile
+++ b/CICD/Jenkinsfile
@@ -43,7 +43,7 @@ node
         {
         dir("./elte-ik-msc-weather-cam")
         {
-            var ret=sh(script: 'git diff --name-only main..dev | wc -l', returnStdout: true)
+            ret = sh(script: 'git diff --name-only main..dev | wc -l', returnStdout: true)
             echo ret
             if(ret == 0)
             {
