--- a/CICD/Jenkinsfile
+++ b/CICD/Jenkinsfile
@@ -45,7 +45,7 @@ node
         {
             ret = sh(script: 'git diff --name-only main..dev | wc -l', returnStdout: true)
             echo ret
-            if(ret == 0)
+            if(ret == "0")
             {
                 throw new Exception("NO CHANGES")
             }
