--- a/CICD/Jenkinsfile
+++ b/CICD/Jenkinsfile
@@ -14,7 +14,13 @@ node
         sh "git clone https://github.com/SandorBalazsHU/elte-ik-msc-weather-cam"
         dir("./elte-ik-msc-weather-cam")
         {
-            sh "git checkout dev"
+            ret = sh(script: 'git diff --name-only main..dev | wc -l', returnStdout: true)
+            if(ret.toString().trim() == "0")
+            {
+                sh "git checkout main"
+            }else{
+                sh "git checkout dev"
+            }
         }
     }
 
