--- a/AndroidApp/app/build.gradle
+++ b/AndroidApp/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.1.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+    implementation project(path: ':libapi')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -66,3 +67,7 @@ dependencies {
     // Koin Test features
     //testImplementation "io.insert-koin:koin-test:3.2.2"
 }
+
+//build.configure {
+//    dependsOn(tasks.openApiGenerate)
+//}
