--- a/AndroidApp/libapi/build.gradle
+++ b/AndroidApp/libapi/build.gradle
@@ -8,7 +8,6 @@ version '1.0.0'
 
 buildscript {
     ext.kotlin_version = '1.6.10'
-    ext.ktor_version = '2.0.3'
 
     repositories {
         maven { url "https://repo1.maven.org/maven2" }
@@ -34,8 +33,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.3"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3"
-    implementation "io.ktor:ktor-client-core:$ktor_version"
     implementation "io.ktor:ktor-client-content-negotiation:$ktor_version"
+    implementation "io.ktor:ktor-client-core:$ktor_version"
+    implementation "io.ktor:ktor-client-android:$ktor_version"
     testImplementation "io.kotlintest:kotlintest-runner-junit5:3.4.2"
     testImplementation 'junit:junit:4.13.2'
 
