--- a/AndroidApp/app/build.gradle
+++ b/AndroidApp/app/build.gradle
@@ -47,6 +47,8 @@ android {
 }
 
 dependencies {
+    def work_version = "2.7.1"
+
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
@@ -59,6 +61,7 @@ dependencies {
     implementation "io.ktor:ktor-client-android:$ktor_version"
     implementation "io.ktor:ktor-client-content-negotiation:$ktor_version"
     implementation("io.ktor:ktor-serialization-kotlinx-json:$ktor_version")
+    implementation "androidx.work:work-runtime-ktx:$work_version"
     implementation project(path: ':libapi')
 
     testImplementation 'junit:junit:4.13.2'
