Created login page and added OpenApi code generation

--- a/WebApp/weather-cam-web-app/tsconfig.json
+++ b/WebApp/weather-cam-web-app/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "files": [],
   "compilerOptions": {
+    "types": ["vuetify"],
     "paths": {
-      "@/*": [
-       "./*"
-      ]
-     },
+      "@/*": ["./*"]
+    }
   },
   "references": [
     {
