--- a/WebApp/weather-cam-web-app/package.json
+++ b/WebApp/weather-cam-web-app/package.json
@@ -11,12 +11,17 @@
     "dev": "vite --host --port 8080",
     "preview": "vite preview --port 4173",
     "test:e2e:ci": "start-server-and-test preview http://localhost:4173/ 'cypress run --e2e'",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
+    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
+    "mock-api": "prism mock https://raw.githubusercontent.com/SandorBalazsHU/elte-ik-msc-weather-cam/main/Documentation/WebApi/weather-cam-web-api.yaml",
+    "swagger-gen": "openapi-generator-cli generate -i https://raw.githubusercontent.com/SandorBalazsHU/elte-ik-msc-weather-cam/main/Documentation/WebApi/weather-cam-web-api.yaml -o src/generated-sources/openapi -g typescript-fetch --additional-properties=supportsES6=true"
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@openapitools/openapi-generator-cli": "^2.5.2",
+    "isomorphic-fetch": "^3.0.0",
     "pinia": "^2.0.21",
     "roboto-fontface": "*",
+    "url": "^0.11.0",
     "vee-validate": "^4.7.1",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5",
