--- a/WebApp/weather-cam-web-app/package.json
+++ b/WebApp/weather-cam-web-app/package.json
@@ -18,16 +18,12 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "@openapitools/openapi-generator-cli": "^2.5.2",
-    "isomorphic-fetch": "^3.0.0",
     "pinia": "^2.0.21",
     "roboto-fontface": "*",
-    "url": "^0.11.0",
-    "vee-validate": "^4.7.1",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5",
     "vuetify": "^3.0.0-beta.0",
-    "webfontloader": "^1.0.0",
-    "yup": "^0.32.11"
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
