--- a/AndroidApp/build.gradle
+++ b/AndroidApp/build.gradle
@@ -2,12 +2,18 @@ buildscript {
     ext {
         compose_ui_version = '1.1.1'
         ktor_version = '2.0.3'
-
+        kotlin_version = '1.7.20'
+        compose_compiler_version = '1.3.2'
+    }
+    dependencies {
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
+        classpath("org.jetbrains.kotlin:kotlin-serialization:$kotlin_version")
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
+   // id 'org.jetbrains.kotlin.multiplatform' version '1.7.20'
+  //  id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.20'
 }
-
