Added custom 404 screen.

--- a/WebApp/weather-cam-web-app/tsconfig.vitest.json
+++ b/WebApp/weather-cam-web-app/tsconfig.vitest.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "composite": true,
     "lib": [],
-    "types": ["node", "jsdom", "vuetify"]
+    "types": ["node", "jsdom", "vuetify"],
+    "experimentalDecorators": true
   }
 }
