--- a/WebApp/weather-cam-web-app/package.json
+++ b/WebApp/weather-cam-web-app/package.json
@@ -23,6 +23,7 @@
     "ftp-deploy": "^2.4.3",
     "pinia": "^2.0.21",
     "roboto-fontface": "*",
+    "textfit": "^2.4.0",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5",
     "vuetify": "^3.0.0-beta.15",
@@ -34,6 +35,7 @@
     "@types/lodash": "^4.14.187",
     "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^16.18.3",
+    "@types/textfit": "^2.4.2",
     "@types/webfontloader": "^1.0.0",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
