--- a/Documentation/WebApi/weather-cam-web-api.yaml
+++ b/Documentation/WebApi/weather-cam-web-api.yaml
@@ -850,7 +850,6 @@ paths:
             required: true
             schema:
               type: string
-              nullable: false
       summary: Add new stations to the user.
       
       description: |
@@ -1078,6 +1077,7 @@ components:
         message: Failed to register user. Username is already taken.
   schemas:
     IndexedMeasurement:
+      required: ['measurement_id','station_id']
       description: |
         IndexedMeasurement is the same as Measurement with the exception of added properties station_id and measurement_id.  
         station_id and measurement_id follows the [uuid](https://en.wikipedia.org/wiki/Universally_unique_identifier) standard.
@@ -1088,19 +1088,18 @@ components:
             measurement_id:
               type: string
               format: uuid
-              nullable: false
               description: |
                 measurement_id is a __unique__ identifier for measurements.  
                 measurement_id follows the [uuid](https://en.wikipedia.org/wiki/Universally_unique_identifier) standard.
             station_id:
               type: string
               format: uuid
-              nullable: false
               description: |
                 station_id is a __unique__ identifier for weather stations.  
                 station_id follows the [uuid](https://en.wikipedia.org/wiki/Universally_unique_identifier) standard.
     Measurement:
       description: Measurement contains the data recorded by the sensors.
+      required: ['temperature','pressure','humidity','battery','timestamp']
       type: object
       properties:
         temperature:
@@ -1110,7 +1109,6 @@ components:
           example: 22.3
           minimum: -273.15
           maximum: 200
-          nullable: false
         pressure:
           description: pressure in millibars.
           type: number
@@ -1118,7 +1116,6 @@ components:
           example: 1013.25
           minimum: 0
           maximum: 10000
-          nullable: false
         humidity:
           description: humidity in percentage.
           type: number
@@ -1126,7 +1123,6 @@ components:
           example: 66.6
           minimum: 0
           maximum: 100
-          nullable: false
         battery:
           description: remaining battery in percentage
           type: number
@@ -1134,13 +1130,11 @@ components:
           example: 52.3
           minimum: 0
           maximum: 100
-          nullable: false
         timestamp:
           type: integer
           format: int64
           example: 1667076196
           minimum: 0
-          nullable: false
           description: |
             the time of recording the measurement
             timestamp follows the [unix time](https://en.wikipedia.org/wiki/Unix_time) standard.
@@ -1155,6 +1149,7 @@ components:
     StorageInfo:
       description: StorageInfo contains data about the storage usage of the server.
       type: object
+      required: ['total_storage','used_storage']
       properties:
         total_storage:
           description: total_storage is the total amount of storage in bytes.
@@ -1162,16 +1157,15 @@ components:
           format: int64
           example: 564234234235
           minimum: 0
-          nullable: false
         used_storage:
           description: used_storage is the amount of used storage in bytes.
           type: integer
           format: int64
           example: 324534534533
           minimum: 0
-          nullable: false
     User:
       description: User contains all the user information.
+      required: ['user_id','username','password']
       type: object
       properties:
         user_id:
@@ -1181,16 +1175,13 @@ components:
           type: string
           format: uuid
           example: 49b82cfb-b8bd-4c50-b8fc-c174c62c9e04
-          nullable: false
         username:
           description: username is a unique name used to identify the user.
           type: string
           example: theUser
-          nullable: false
         password:
           type: string
           example: '12345'
-          nullable: false
     UserUpdateable:
       description: User contains all the user information.
       type: object
@@ -1199,14 +1190,13 @@ components:
           description: username is a unique name used to identify the user.
           type: string
           example: theUser
-          nullable: false
         password:
           type: string
           example: '12345'
-          nullable: false
     Station:
       description: Station contains information about a weather station.
       type: object
+      required: ['station_id','station_name','station_timezone']
       properties:
         station_id:
           description: |
@@ -1214,12 +1204,10 @@ components:
             station_id follows the [uuid](https://en.wikipedia.org/wiki/Universally_unique_identifier) standard.
           type: string
           format: uuid
-          nullable: false
           example: 49b82cfb-b8bd-4c50-b8fc-c174c62c9e04
         station_name:
           type: string
           description: station_name is the unique name of the station.
-          nullable: false
           example: home_station_01
           
         station_timezone:
@@ -1227,12 +1215,12 @@ components:
           description: | 
             station_timezone is the timezone where the station is located at.
             station_timezone follows the [UTC](https://en.wikipedia.org/wiki/Coordinated_Universal_Time) standard.
-          nullable: false
           example: -3
           minimum: -12
           maximum: 14
     StationApiKey:
       type: object
+      required: ['station_id','api_key']
       description: |
         StationApiKey contains information about the newly added station and it's api_key.  
         **Important**: The api_key is only recieved once after creating a new station make sure to write it down somewhere! 
@@ -1244,16 +1232,13 @@ components:
             station_id follows the [uuid](https://en.wikipedia.org/wiki/Universally_unique_identifier) standard.
           format: uuid
           example: 49b82cfb-b8bd-4c50-b8fc-c174c62c9e04
-          nullable: false
         api_key:
           type: string
           format: uuid
-          nullable: false
           description: |
             api_key gives access to upload measurements to the server.  
     StationArray:
       type: array
-      nullable: false
       example:
         - station_id: 49b82cfb-b8bd-4c50-b8fc-c174c62c9e04
           station_name: home_station_01
@@ -1264,7 +1249,7 @@ components:
     ApiResponse:
       description: ApiResponse contains information about the result of a request.
       type: object
-      nullable: false
+      required: ['code','type','message']
       properties:
         code:
           description: 'code is the status of the returned request. code follows the [HTTP response codes](https://developer.mozilla.org/en-US/docs/Web/HTTP/Status)'
@@ -1273,17 +1258,14 @@ components:
           example: 420
           minimum: 100
           maximum: 599
-          nullable: false
         type:
           description: 'type is used to categorize responses. The different types of responses can be found [here](https://developer.mozilla.org/en-US/docs/Web/HTTP/Status).'
           type: string
           example: example
-          nullable: false
         message:
           description: message is a more detailed information about the response.
           type: string
           example: An example message of type example generated by an example API response
-          nullable: false
   securitySchemes:
     apiKeyAuth:
       type: apiKey
