--- a/WebApp/weather-cam-web-app/package.json
+++ b/WebApp/weather-cam-web-app/package.json
@@ -14,7 +14,7 @@
     "test:e2e:ci": "start-server-and-test preview http://localhost:4173/ 'cypress run --e2e'",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "mock-api": "prism mock https://raw.githubusercontent.com/SandorBalazsHU/elte-ik-msc-weather-cam/main/Documentation/WebApi/weather-cam-web-api.yaml",
-    "swagger-gen": "openapi-generator-cli generate -i https://raw.githubusercontent.com/SandorBalazsHU/elte-ik-msc-weather-cam/main/Documentation/WebApi/weather-cam-web-api.yaml -o src/api/openapi -g typescript-fetch --additional-properties=supportsES6=true"
+    "swagger-gen": "openapi-generator-cli generate -i https://raw.githubusercontent.com/SandorBalazsHU/elte-ik-msc-weather-cam/dev/Documentation/WebApi/weather-cam-web-api.yaml -o src/api/openapi -g typescript-fetch --additional-properties=supportsES6=true"
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
@@ -25,6 +25,7 @@
     "roboto-fontface": "*",
     "textfit": "^2.4.0",
     "vue": "^3.2.38",
+    "vue-chart-3": "^3.1.8",
     "vue-router": "^4.1.5",
     "vuetify": "^3.0.0-beta.15",
     "webfontloader": "^1.0.0"
